#mant0000089: Bouton "retour" en période d'essaie sur la gestion de l'abonnement

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1095,3 +1095,7 @@ table.super-fancy tr.foobar {
     text-align: justify;
     text-indent: 10px;
 }
+
+.nav-wrapper a.brand-logo {
+    font-size: 150%;
+}
