--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -161,7 +161,8 @@
 <div class="navbar-fixed" ng-if="intrial && !hideTrial">
     <div class="row light-primary-color">
         <div class="col s12 center"><h4 translate="headerMenu.trial.title"></h4></div>
-        <div class="col s12 secondary-text-color center" translate="headerMenu.trial.content" translate-values="trialCountVal"></div>
+        <div class="col s12 secondary-text-color center" translate="headerMenu.trial.content" translate-values="trialCountVal" ng-if="trialCountVal.count > 0"></div>
+        <div class="col s12 secondary-text-color center" translate="headerMenu.trial-ended.content" ng-if="trialCountVal.count <= 0"></div>
         <div class="col s12">&nbsp;</div>
         <div class="col s12 center">
             <a href="javascript:void(0);" ng-click="closeTrial()" class="btn-floating accent-color">
