--- a/src/app/components/directives/commons/titlePageBar/titlePageBar.html
+++ b/src/app/components/directives/commons/titlePageBar/titlePageBar.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="col l2">
-            <button class="btn accent-color right" ng-click="doTheBack()" ng-if="displayBack"
+            <button class="btn accent-color right" ng-click="doTheBack()" ng-if="displayBack === true"
                     translate="commons.buttons.back"></button>
         </div>
     </div>
