--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -4,7 +4,7 @@
     <div class="row hide-on-med-and-down"></div>
 
     <!-- Entete -->
-    <title-page-bar icon="verified_user" title="billingPage.title" display-back="false"></title-page-bar>
+    <title-page-bar icon="verified_user" title="billingPage.title" display-back="{{false}}"></title-page-bar>
 
     <!-- Large view-->
     <div class="row hide-on-med-and-down">
