sendInvitation to join workspace

--- a/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
+++ b/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
@@ -53,7 +53,7 @@
             <h6>{{'sbMemberMngtPage.label.invitePending' | translate }}</h6>
         </div>
         <div class="col s2 center">
-            <a href="#/private/inviteMember" class="waves-effect waves-light btn right accent-color">
+            <a href="#/private/sbSharing" class="btn right accent-color">
                 <i class="material-icons">share</i>
             </a>
         </div>
