--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1091,3 +1091,10 @@ table.super-fancy tr.foobar {
 .cnil-main p {
     text-align: justify;
 }
+
+.default-chip {
+    border: 2px solid #607d8b;
+    border-radius: 4px;
+    background: #ffffff;
+    padding: 5px;
+}
