banière période d'essai

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -142,7 +142,7 @@
     <angular-feedback options="feedbackOptions" meta="meta"></angular-feedback>
 </div>
 
-<div class="navbar-fixed" ng-if="intrial && !hideTrial">
+<div class="navbar-fixed trial-banner" ng-if="intrial && !hideTrial">
     <div class="row light-primary-color">
         <div class="col s12 center"><h4 translate="headerMenu.trial.title"></h4></div>
         <div class="col s12 secondary-text-color center" translate="headerMenu.trial.content" translate-values="trialCountVal" ng-if="trialCountVal.count > 0"></div>
