--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1099,3 +1099,18 @@ table.super-fancy tr.foobar {
 .nav-wrapper a.brand-logo {
     font-size: 150%;
 }
+
+.trial-banner {
+    position: absolute;
+    right: 0;
+    left: 0;
+    z-index: 10;
+}
+
+.trial-banner > div {
+    -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+    -o-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+    filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(0, 0, 0, 0.12), Direction=180, Strength=10);
+}
