#mant0000080: [PRO-001] Chiffre dans le prénom

--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -92,7 +92,7 @@
                                       ng-show="profileForm.userName.$invalid && !profileForm.userName.$pristine"
                                       translate="profilePage.form.messageControl.name"></span>
                                 <span class="small accent-text-color invalid"
-                                      ng-if="profileForm.userFirstname.$error.pattern"
+                                      ng-if="profileForm.userName.$error.pattern"
                                       translate="signupStartPage.form.messageControl.badchars"></span>
                             </div>
                         </div>
