--- a/src/app/modules/commons/users/signup/signupStartDone.html
+++ b/src/app/modules/commons/users/signup/signupStartDone.html
@@ -1,4 +1,4 @@
-<div class="container colorMain-text">
+<div class="container primary-text-color">
 <!-- body start--> 
     
 	<div class="container">
@@ -29,14 +29,14 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text colorAccent" ng-click="goHome()"><i class="material-icons left">home</i>{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
+                <a href="" class="btn white-text accent-color" ng-click="goHome()">{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="colorSecondary">
+<div class="secondary-color">
     <div class="section white-text">
 
 
