--- a/src/app/modules/commons/users/signup/signupEndDone.html
+++ b/src/app/modules/commons/users/signup/signupEndDone.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col s12">
                     <div class="center icon-block">
-                         <div class="colorAccent-text">
+                         <div class="accent-text-color">
                              <i class="medium material-icons">verified_user</i>
                          </div>
                         <h4 class="center" translate="signupStartDonePage.title"></h4>
@@ -31,14 +31,14 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text colorAccent" ng-click="goHome()"><i class="material-icons left">home</i>{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
+                <a href="" class="btn white-text accent-color" ng-click="goHome()">{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
                 </div>
             </div>
         </div>
     </div>
 </div>    
 
-<div class="colorSecondary">
+<div class="secondary-color">
     <div class="section white-text">
 
 
