--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -24,6 +24,19 @@
                         </div>
                         <div class="input-field col s8">
                             <input id="EventStartDate" name="EventStartDate" type="text"
+                                   input-date
+                                   format="{{'commons.format.date.label' | translate}}"
+                                   months-full="{{ ('commons.format.date.listMonth' | translate).split(',')}}"
+                                   months-short="{{ ('commons.format.date.listMonthShort' | translate).split(',')}}"
+                                   weekdays-full="{{ ('commons.format.date.listWeekdaysFull' | translate).split(',') }}"
+                                   weekdays-short="{{ ('commons.format.date.listWeekdaysShort' | translate).split(',') }}"
+                                   weekdays-letter="{{ ('commons.format.date.listWeekdaysLetter' | translate).split(',') }}"
+                                   min="{{ minDate }}"
+                                   today="('commons.format.date.today' | translate)"
+                                   first-day="1"
+                                   clear="('commons.format.date.clear' | translate)"
+                                   close="('commons.format.date.close' | translate)"
+                                   select-years="3"
                                    ng-model="startDate" required
                                    class="datepicker"
                                    ng-class="{ 'has-error' : eventForm.EventStartDate.$invalid && !eventForm.EventStartDate.$pristine }"/>
@@ -32,7 +45,7 @@
                              ng-show="eventForm.EventStartDate.$invalid && !eventForm.EventStartDate.$pristine"
                              translate="eventErrors.StartDate"></div>
 
-                        <div class="input-field col s4">
+                        <div class="input-field col s4">{{monthsFull}}
                             <label>{{'eventLabels.StartHour' | translate }} <span
                                     class="accent-text-color">*</span></label>
                         </div>
