--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -77,6 +77,7 @@
                                        weekdays-letter="{{ ('commons.format.date.listWeekdaysLetter' | translate).split(',') }}"
                                        today="('commons.format.date.today' | translate)"
                                        first-day="1"
+                                       max="{{ maxDate }}"
                                        clear="('commons.format.date.clear' | translate)"
                                        close="('commons.format.date.close' | translate)"
                                        select-years="15"
