--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -242,9 +242,7 @@
     </div>
     <div class="modal-content white">
         <div class="row">
-            <div class="col s12">
-                {{'modalSignupCancel.question' | translate}}
-            </div>
+            <div class="col s12" translate="modalSignupCancel.question"></div>
         </div>
     </div>
     <div class="center">
@@ -266,7 +264,7 @@
     <div class="modal-header center-align">
         <h5>
             <span class="fa fa-sign-in"></span>
-            <span>{{'modalCreate.title' | translate}}</span>
+            <span translate="modalCreate.title"></span>
         </h5>
     </div>
 
@@ -286,4 +284,3 @@
         <div class="col s12">&nbsp;</div>
     </div>
 </div>
-
