--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,13 +1,13 @@
-
-<div class="default-primary-color">    
+<div class="default-primary-color">
     <div class="row landing">
-        
+
         <div class="col s12"><h2 translate="landing.main-title"></h2></div>
 
-        <div class="col s12"> 
-            <a class="btn waves-effect waves-white secondary-color" ng-click="openSignup()" translate="navbar.signup"></a>
+        <div class="col s12">
+            <a class="btn waves-effect waves-white secondary-color" ng-click="openSignup()"
+               translate="navbar.signup"></a>
         </div>
-    
+
         <div class="col m4 s12 hide-on-med-and-down">
             <i class="material-icons md-60 accent-text-color">camera_alt</i>
             <h4 translate="landing.part-2.capture"></h4>
@@ -20,10 +20,10 @@
             <i class="material-icons md-60 accent-text-color">show_chart</i>
             <h4 translate="landing.part-2.progress"></h4>
         </div>
-           
-        
+
+
         <div class="col s12 landing-part-two primary-text-color">
-            <div class="row">    
+            <div class="row">
                 <div class="col s12"><h3 translate="landing.part-2.title"></h3></div>
 
                 <div class="col s12 m6">
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="row">&nbsp;</div>
-    
+
     <div class="secondary-color">
         <div class="section">
             <div class="row">&nbsp;</div>
@@ -86,7 +86,9 @@
                 <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
                 -->
                 <span class="col m5 hide-on-small-only">&nbsp;</span>
-                <img class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank">
+                    <img class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+                </a>
                 <span class="col m5 hide-on-small-only">&nbsp;</span>
             </div>
         </div>
