--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -6,21 +6,26 @@
        
     
     <div class="row">
-        <div class="col s12 l5">
+        <div class="col s12 l4">
             <widget-notifications meta="meta" user="user"/>
         </div>
         
-        <div class="col s12 l7">
+        <div class="col s12 l4">
+            <widget-calendar meta="meta" user="user"/>
+        </div>
+        
+        <div class="col s12 l4">
+            <widget-calendar meta="meta" user="user"/>
+        </div>
+        
+        <div class="col s12">
             <widget-podium meta="meta" user="user" indicator="goalScored" nbitem="3" stataggregat="COUNT"/>
         </div>
     
-        <div class="col s12 l7" style="margin-top:15px;">
+        <div class="col s12">
             <widget-podium meta="meta" user="user" indicator="playTime" nbitem="3" stataggregat="SUM"/>
         </div>
         
-        <div class="col s12 l5" style="margin-top:15px;">
-            <widget-calendar meta="meta" user="user"/>
-        </div>
     </div>
   
 </div>
