--- a/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
+++ b/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
@@ -65,7 +65,7 @@
                         <span>{{invite.userEmail}}</span>
                         <br>
                         <br>
-                        <i class="material-icons md-36 secondary-text-color">share</i>
+                        <i class="material-icons md-36 secondary-text-color">send</i>
                         <br>
                         <br>
                         <span>{{'sbMemberMngtPage.label.invitationDate' | translate }} {{ invite.invitationDate | date : format : timezone}}</span>
