--- a/src/app/modules/commons/users/signup/signupEndError.html
+++ b/src/app/modules/commons/users/signup/signupEndError.html
@@ -1,15 +1,15 @@
-<div class="container">
+<div class="container primary-text-color">
 <!-- body start-->
     <div class="row"> <div class="col s10"></div></div>   
     
-	<div class="container colorMain-text">
+	<div class="container">
         <div class="section">
             <!--   Icon Section   -->
             <div class="row">
                 <div class="col s12">
                     <div class="center icon-block">
-                         <div class="colorAccent-text">
-                             <i class="medium material-icons">highlight_off</i>
+                         <div class="accent-text-color">
+                             <i class="material-icons md-48">highlight_off</i>
                          </div>
                         <h5 class="center" translate="signupEndPage.errorPage.title"></h5>
                     </div>
@@ -22,7 +22,7 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text colorAccent" ng-click="goHome()">{{'signupEndPage.errorPage.buttonHome' | translate }}</a>&nbsp;
+                <a href="" class="btn white-text secondary-color" ng-click="goHome()">{{'signupEndPage.errorPage.buttonHome' | translate }}</a>&nbsp;
                 </div>
             </div>
         </div>
