--- a/src/app/components/directives/widgets/notifications/notifications.html
+++ b/src/app/components/directives/widgets/notifications/notifications.html
@@ -1,6 +1,10 @@
 <div class="card primary-text-color">
     <div class="card-content dark-primary-color">
-        <span class="card-title"><i class="fa fa-bell"></i> {{'dashboard.widgetNotifications.title'  | translate}}</span>
+        <span class="card-title">
+            <small>
+                <i class="fa fa-bell"></i> {{'dashboard.widgetNotifications.title'  | translate}}
+            </small>
+        </span>
 
     </div>
     <div class="card-content light-primary-color" style="overflow-y: auto; height:255px;">
