--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -4,13 +4,13 @@
     <div class="card-content dark-primary-color">
         <span class="activator card-title" ng-if="indicator==='goalScored'"> 
             <i class="fa fa-futbol-o left"></i>
-            {{'dashboard.widgetTopScored.title' | translate}} 
+            <small>{{'dashboard.widgetTopScored.title' | translate}}</small>
             <i class=" material-icons right">more_vert</i>
         </span>
         
-        <span class="activator card-title" ng-if="indicator==='playTime'"> 
+        <span class="activator card-title" ng-if="indicator==='playTime'">
             <i class="fa fa-clock-o left"></i>
-            {{'dashboard.widgetTopUsed.title' | translate}} 
+            <small>{{'dashboard.widgetTopUsed.title' | translate}}</small>
             <i class=" material-icons right">more_vert</i>
         </span>
 
