--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -4,7 +4,27 @@
     <div class="row"></div>
 
     <!-- Entete -->
+    
     <title-page-bar icon="account_box" title="profilePage.title"></title-page-bar>
+    
+    <div class="row">
+        <div class="col s12">
+            <div class="row dark-primary-color center">
+                <div class="col m3 s12 center">
+                    <avatar person="user" width="'80px'" collection="User"></avatar>
+                    <span class="small" translate="profilePage.form.label.avatar"></span>
+                </div>
+                <div class="col m7 s12">
+                    <br/>
+                    <h4>{{user.firstname}} {{user.name}}</h4>
+                    <h5>{{user.account.login}}</h5>
+                </div>
+                <div class="col m2 s12">
+                    <br/>&nbsp;
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col s12 card">
