--- a/src/app/modules/commons/users/signup/signupEndDone.html
+++ b/src/app/modules/commons/users/signup/signupEndDone.html
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text accent-color" ng-click="goHome()">{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
+                <a href="#/private/" class="btn white-text accent-color">{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
                 </div>
             </div>
         </div>
