Wording + refus invitation

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -18,6 +18,10 @@
                 </li>
                
                 <li>
+                    <a class="waves-effect waves-white secondary-color" ng-click="openSignup()">{{'navbar.signup' | translate}}</a>
+                </li>
+                
+                <li>
                     <a ng-click="openLogin()">
                         {{'navbar.connect' | translate}}
                     </a>
