--- a/src/app/index.css
+++ b/src/app/index.css
@@ -103,7 +103,6 @@
     text-align: left;
     position: relative;
     padding: 3vh 7vw 3vh 7vw;
-    background: rgba(255, 255, 255, 0.1) !important;
 }
 
 .top-nav-trans {
@@ -151,7 +150,7 @@
     border-radius: 8px;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
     padding: 3vh 7vw 3vh 7vw;
-    background-color: #ffffff;
+    background-color: #607d8b !important;
 }
 
 .landing div {
@@ -183,7 +182,7 @@
     border-radius: 8px;
 }
 
-.card-content img {
+.aboutUs img {
     filter: grayscale(100%);
     border-radius: 12px !important;
 }
