--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,35 +1,30 @@
-<div class="default-primary-color">
+<div class="dark-primary-color">
     <div class="row landing">
 
-        <div class="col s12"><h2 translate="landing.main-title"></h2></div>
-
-        <div class="col s12">
-            <a class="btn waves-effect waves-white secondary-color" ng-click="openSignup()"
-               translate="navbar.signup"></a>
-        </div>
+        <div class="col s12"><h3 translate="landing.main-title"></h3></div>
 
         <div class="col m4 s12 hide-on-med-and-down">
-            <i class="material-icons md-60 accent-text-color">camera_alt</i>
+            <img src="../../../assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}">
             <h4 translate="landing.part-2.capture"></h4>
         </div>
         <div class="col m4 s12 hide-on-med-and-down">
-            <i class="material-icons md-60 accent-text-color">insert_chart</i>
+            <img src="../../../assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}">
             <h4 translate="landing.part-2.analyze"></h4>
         </div>
         <div class="col m4 s12 hide-on-med-and-down">
-            <i class="material-icons md-60 accent-text-color">show_chart</i>
+            <img src="../../../assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}">
             <h4 translate="landing.part-2.progress"></h4>
-        </div>
+        </div>    
 
-
-        <div class="col s12 landing-part-two primary-text-color">
+        <div class="col s12 landing-part-two white-text">
             <div class="row">
                 <div class="col s12"><h3 translate="landing.part-2.title"></h3></div>
 
-                <div class="col s12 m6">
+                <div class="col s12 m4">
                     <div class="center">
                         <div class="accent-text-color">
-                            <i class="large material-icons">store</i>
+                            <img src="../../../assets/images/icons/home-store-L.png">
+                            
                         </div>
                         <h5 translate="landing.area-3.item-2.title" class="title"></h5>
 
@@ -37,16 +32,7 @@
                     </div>
                 </div>
 
-                <div class="col s12 m6">
-                    <div class="center">
-                        <div class="heroPartOne">
-                            &nbsp;
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col s12 m6">
+                <div class="col s12 m4">
                     <div class="center">
                         <div class="accent-text-color">
                             <i class="large material-icons">stay_current_landscape</i>
@@ -58,10 +44,10 @@
                     </div>
                 </div>
 
-                <div class="col s12 m6">
+                <div class="col s12 m4">
                     <div class="center">
                         <div class="accent-text-color">
-                            <i class="large material-icons">loop</i>
+                            <img src="../../../assets/images/icons/home-refresh-L.png">
                         </div>
                         <h5 translate="landing.area-3.item-3.title" class="title"></h5>
 
@@ -69,18 +55,9 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-    </div>
-    <div class="row">&nbsp;</div>
-
-    <div class="secondary-color">
-        <div class="section">
-            <div class="row">&nbsp;</div>
-
-            <h5 class="center-align" translate="landing.area-4.content"></h5>
-            <div class="row">&nbsp;</div>
+            
             <div class="row">
+                <h5 class="center-align" translate="landing.area-4.content"></h5>
                 <!-- 
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
                 <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
@@ -91,6 +68,15 @@
                 </a>
                 <span class="col m5 hide-on-small-only">&nbsp;</span>
             </div>
+
+        </div>
+    </div>
+    <div class="row">&nbsp;</div>
+
+    <div>
+        <div class="section">
+            <div class="row">&nbsp;</div>
+
         </div>
     </div>
 </div>
