--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,105 +1,1 @@
-<!-- START PRICING TABLE CONTAINER -->
-<div class="light-primary-color">
-    <div class="row default-primary-color pricing" style="margin-bottom:0px;">
-        <div class="col s12  center-align">
-            <h2 class="title" translate="pricing.title"></h2>
-            
-        </div>
-
-        <div class="col s12">&nbsp;</div>
-        <div class="col s12 landing-part-two">
-            <div class="row">
-                <div class="col s12"><h5 class="title primary-text-color" translate="pricing.desc"></h5></div></div> 
-                <div class="col l4 s12">
-                    <div class="card-title secondary-color">
-                        <h4 translate="pricing.offers.standard.title"></h4>
-                    </div>
-                    <div class="card-content light-primary-color">
-                        <div class="price center-align">
-                            <h5>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h5>
-                        </div>
-
-                        <a class="btn waves-effect waves-light secondary-color"
-                           href="#/signupStart" translate="pricing.subscribe-btn">
-                        </a>
-
-                        <ul class="left-align" style="padding-left: 10%;">
-                            <li translate="pricing.offers.standard.detail.line1"></li>
-                            <li translate="pricing.offers.standard.detail.line2"></li>
-                            <li translate="pricing.offers.standard.detail.line3"></li>
-                            <li translate="pricing.offers.standard.detail.line4"></li>
-                            <li translate="pricing.offers.standard.detail.line5"></li>
-                        </ul>
-                        
-                    </div>
-                </div>
-                <div class="col l4 s12">
-                    <div class="card-title accent-color">
-                        <h4 translate="pricing.offers.standard.title"></h4>
-                    </div>
-                    <div class="card-content light-primary-color">
-                        <div class="price center-align">
-                            <h5>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h5>
-                        </div>
-
-                        <a class="btn waves-effect waves-light accent-color"
-                           href="#/signupStart" translate="pricing.subscribe-btn">
-                        </a>
-
-                        <ul class="left-align" style="padding-left: 10%;">
-                            <li translate="pricing.offers.standard.detail.line1"></li>
-                            <li translate="pricing.offers.standard.detail.line2"></li>
-                            <li translate="pricing.offers.standard.detail.line3"></li>
-                            <li translate="pricing.offers.standard.detail.line4"></li>
-                            <li translate="pricing.offers.standard.detail.line5"></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col l4 s12">
-                    <div class="card-title dark-primary-color">
-                        <h4 translate="pricing.offers.standard.title"></h4>
-                    </div>
-                    <div class="card-content light-primary-color">
-                        <div class="price center-align">
-                            <h5>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h5>
-                        </div>
-
-                        <a class="btn waves-effect waves-light dark-primary-color"
-                           href="#/signupStart" translate="pricing.subscribe-btn">
-                        </a>
-
-                        <ul class="left-align" style="padding-left: 10%;">
-                            <li translate="pricing.offers.standard.detail.line1"></li>
-                            <li translate="pricing.offers.standard.detail.line2"></li>
-                            <li translate="pricing.offers.standard.detail.line3"></li>
-                            <li translate="pricing.offers.standard.detail.line4"></li>
-                            <li translate="pricing.offers.standard.detail.line5"></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col s12">
-                    <p class="center-align primary-text-color" translate="pricing.team-subscribe"></p>
-                </div>
-            </div>
-            
-        </div>
-    </div>
-
-    <div class="row  default-primary-color" style="margin-bottom:0px;">
-        <div class="col s12 center-align"> 
-            <div class="row">&nbsp;</div>
-            <div class="row">
-                <div class="col m6 s12 right-align">
-                    <h5 translate="pricing.trial.title"></h5>
-                </div>
-                <div class="col m6 s12 ">
-                        <a class="btn waves-effect waves-light light-primary-color"
-                           href="#/signupStart" translate="pricing.trial.btn"></a>
-
-                </div>
-                <div class="col s12">&nbsp;</div>
-            </div>
-        </div>
-    </div>
-</div>
-
+<pricing public="true" ></pricing>
