--- a/src/app/modules/public/legal.html
+++ b/src/app/modules/public/legal.html
@@ -12,7 +12,7 @@
         </p>
 
         <p>
-            <strong>Propriétaire</strong> : Qaobee – SARL – 45 allée parc ar groas, 29280 Plouzané, France<br/> <strong>Créateur</strong>
+            <strong>Propriétaire</strong> : Qaobee – SARL – 45 allée parc ar groas, 29280 Plouzané, France (SIREN : 801 880 550)<br/> <strong>Créateur</strong>
             : <a href="www.qaobee.com">Qaobee</a><br/> <strong>Responsable
             publication</strong> : Qaobee – <a href="mailto:contact@qaobee.com">contact@qaobee.com</a><br/>
             <strong>Webmaster</strong> : Qaobee – <a href="mailto:contact@qaobee.com">contact@qaobee.com</a><br/>
